<resources>
    <string name="app_name">RecordApp</string>
    <string name="finishedButton">Acabado</string>
    <string name="beginTrialButton">Empezar Prueba</string>
    <string name="stopButton">Parar</string>
    <string name="nextButton">Siguiente</string>
    <string name="successScore">Realizado correctamente</string>
    <string name="getTrialsListButton">Realizar prueba</string>
    <string name="getUsersListButton">Revisar pruebas</string>
    <string name="title_activity_settings">Ajustes</string>

    <!-- Errors  -->
    <string name="error_no_trial_found">No se encontró la prueba seleccionada</string>


    <!-- Sex options -->
    <!--<string name="sexMale">Hombre</string>
    <string name="sexFemale">Mujer</string>
    <string name="sexOther">Otro</string>
    <string name="sexUnknown">Desconocido</string>-->

    <!-- Activities Titles -->
    <string name="title_activity_explorer_menu">Explorador</string>
    <string name="title_activity_select_user">Seleccionar usuario</string>
    <string name="title_activity_select_trial">Seleccionar prueba</string>

    <!-- Preference Titles -->
    <string name="server_settings_header">Servidor</string>
    <string name="device_header">Dispositivo</string>

    <!-- Messages Preferences -->
    <string name="server_ip_title">IP del servidor</string>
    <string name="server_port_title">Puerto</string>

    <!-- Sync Preferences -->
    <string name="device_id_title">ID del dispositivo</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="beginAppButton">Comenzar</string>
    <string name="made_by">Hecho por: Pablo Couso</string>
    <string name="nameField">Nombre:</string>
    <string name="surnameField">Apellidos:</string>
    <string name="ageField">Edad:</string>
    <string name="genderField">Sexo:</string>
    <string name="centreField">Centro asociado:</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="SelectUserFragmentLabel">Seleccionar usuario</string>
    <string name="SelectTrialFragmentLabel">Seleccionar prueba</string>
    <string name="SettingsFragmentLabel">Ajustes</string>
    <string name="trialIdField">Fecha de realización:</string>
    <string name="scoreField">Puntuación:</string>
    <string name="descriptionField">Descripción:</string>
    <string name="trialField">Prueba:</string>
    <string name="scoringCommentHint">Comentario</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>