<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/server_settings_header">

        <EditTextPreference
            android:defaultValue="192.168.0.21"
            android:inputType="phone"
            app:key="server_ip"
            app:title="@string/server_ip_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:inputType="phone"
            app:defaultValue="5000"
            app:key="port"
            app:title="@string/server_port_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/device_header">

        <EditTextPreference
            app:key="device_id"
            app:title="@string/device_id_title"
            app:useSimpleSummaryProvider="true" />

        <!--<SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />-->

    </PreferenceCategory>

</PreferenceScreen>