<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_home_screen_graph"
    android:label="@string/SelectUserFragmentLabel"
    app:startDestination="@id/homeScreenFragment">

    <fragment
        android:id="@+id/selectUserFragment"
        android:name="com.imovil.NEURmetrics.SelectUserFragment"
        android:label="@string/SelectUserFragmentLabel">
        <action
            android:id="@+id/action_selectUserFragment_to_selectTrialFragment"
            app:destination="@id/selectTrialFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_selectUserFragment_to_createUserFragment"
            app:destination="@id/createUserFragment" />
    </fragment>
    <fragment
        android:id="@+id/selectTrialFragment"
        android:name="com.imovil.NEURmetrics.SelectTrialFragment"
        android:label="@string/SelectTrialFragmentLabel" />
    <fragment
        android:id="@+id/homeScreenFragment"
        android:name="com.imovil.NEURmetrics.HomeScreenFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_homeScreenFragment_to_settingsFragment"
            app:destination="@id/settingsFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_homeScreenFragment_to_selectUserFragment"
            app:destination="@id/selectUserFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.imovil.NEURmetrics.SettingsFragment"
        android:label="@string/SettingsFragmentLabel" />
    <fragment
        android:id="@+id/createUserFragment"
        android:name="com.imovil.NEURmetrics.CreateUserFragment"
        android:label="@string/CreateUserFragmentLabel"
        tools:layout="@layout/fragment_create_user" />
</navigation>